--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rock+3D&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
     <link href="style.css" rel="stylesheet">
     <title>Weather App</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Weather app</h1>
+        <form class="cityinput" data-city-input>
+            <input type="text" class="cityinput" data-city-input>
+            <button class="searchbutton" data-search-button>Search</button>
+        </form>
+        <div class="results">
+            <p class="citydisplay">Enter a city above to see the weather</p>
+            <p>The current weather is this temperature with a high of this and a low of that. Expect wind speeds around this miles per hour.</p>
+            <p>Hello there</p>
+        </div>
+    </div>
 </body>
 </html>
