--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <link href="style.css" rel="stylesheet">
     <title>Weather App</title>
 </head>
+
 <body>
     <div class="container">
         <h1>Weather app</h1>
@@ -20,9 +22,11 @@
         </form>
         <div class="results">
             <p class="citydisplay">Enter a city above to see the weather</p>
-            <p>The current weather is this temperature with a high of this and a low of that. Expect wind speeds around this miles per hour.</p>
+            <p>The current weather is this temperature with a high of this and a low of that. Expect wind speeds around
+                this miles per hour.</p>
             <p>Hello there</p>
         </div>
     </div>
 </body>
+
 </html>
