added styling to submit button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="results">
             <p class="citydisplay">Enter a city above to see the weather</p>
             <p>The current weather is this temperature with a high of this and a low of that. Expect wind speeds around
-                this miles per hour.</p>
+                this miles per hour</p>
             <p>Hello there</p>
         </div>
     </div>
