--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
     <div class="container">
         <h1>Weather app</h1>
-        <form class="cityinput" data-city-input>
-            <input type="text" class="cityinput" data-city-input>
+        <form class="cityinput" data-city-form>
+            <input class="cityinput" data-city-input>
             <button class="searchbutton" data-search-button>Search</button>
         </form>
         <div class="results">
-            <p class="citydisplay">Enter a city above to see the weather</p>
-            <p>The current weather is this temperature with a high of this and a low of that. Expect wind speeds around
+            <p class="selectedcity" data-selected-city>Enter a city above to see the weather</p>
+            <p data-city-display>The current weather is this temperature with a high of this and a low of that. Expect wind speeds around
                 this miles per hour</p>
             <p>Hello there</p>
         </div>
