added button to switch between celsius and fahrenheit

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
             <button class="searchbutton" data-search-button>Search</button>
         </form>
         <div class="results">
-            <p class="selectedcity" data-selected-city>Enter a city above to see the weather</p>
-            <p data-city-display>The current weather is this temperature with a high of this and a low of that. Expect wind speeds around
-                this miles per hour</p>
-            <p>Hello there</p>
+            <p class="selectedcity" data-selected-city>Enter a city above to see the weather in fahrenheit</p>
+            <p data-city-display></p>
+            <button class="convertbtn" data-convert-celsius>Convert to Celsius</button>
         </div>
     </div>
 </body>
