convert button pops up when results are shown

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="results">
             <p class="selectedcity" data-selected-city>Enter a city above to see the weather in fahrenheit</p>
             <p data-city-display></p>
-            <button class="convertbtn" data-convert-celsius>Convert to Celsius</button>
+            <button class="convertbtn searchbutton hidden" data-convert-celsius>Convert to Celsius</button>
         </div>
     </div>
 </body>
