separated results into different divs

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <div class="results">
             <p class="selectedcity" data-selected-city>Enter a city above to see the weather in fahrenheit</p>
             <p data-city-display></p>
+            <div data-high-temp></div>
+            <div data-low-temp></div>
+            <div data-wind></div>
             <button class="convertbtn searchbutton hidden" data-convert-celsius>Convert to Celsius</button>
         </div>
     </div>
