removed constants for temp displays

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </form>
         <div class="results">
             <p class="selectedcity" data-selected-city>Enter a city above to see the weather in fahrenheit</p>
-            <p data-city-display></p>
+            <p data-current-temp></p>
             <div data-high-temp></div>
             <div data-low-temp></div>
             <div data-wind></div>
